aloes-1 Clean code

--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -6,41 +6,38 @@
 <header th:replace="layout/Layout :: header"/>
 
 <!--CONTAINER-->
-
 <div class="container py-4">
 
     <div class="card border-primary text-center">
+
         <!--INFO-->
         <div th:replace="layout/Layout :: info"/>
 
         <div class="card-header">
             Login:
         </div>
+
         <div class="card-body">
             <form th:action="@{/login}" method="post">
                 <div class="form-group col-sm-6">
-                    <input th:type="text" name="username" id="username" class="form-control"th:value="'Login'" />
+                    <input th:type="text" name="username" id="username" class="form-control"th:value="'Login'">
                 </div>
                 <div class="form-group col-sm-6">
                     <input th:type="password" name="password" id="password" class="form-control"
-                    th:value="'Password'"/>
+                    th:value="'Password'">
                 </div>
                 <div class="form-group col-sm-6">
                     <input th:type="submit" th:value="'Login'"/>
                 </div>
-
             </form>
-
         </div>
     </div>
 </div>
-<br><br>
+
 <footer>
     <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
-
     <script th:src="@{/js/jquery-ui.min.js}"></script>
-
 </footer>
 
 </body>
