--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"/>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <title>Title</title>
-</head>
+<head th:replace="layout/Layout :: head"/>
 <body>
+
 <!--HEADER-->
 <header th:replace="layout/Layout :: header"/>
 
-<!--CONTAINER-->
 
+<!--CONTAINER-->
 <div class="container pt-5">
     <div class="card bg-success text-white">
      <label th:text="${title}"/>
@@ -33,30 +27,33 @@
                 <input th:type="text" class="form-control" th:field="*{surname}" th:errorclass="alert-danger" >
             </label>
             <small class="text-form text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"/>
-
         </div>
+
         <div class="form-group row">
         <label>Mail:</label>
         <input class="form-control" th:type="text" th:field="*{email}" th:errorclass="alert-danger">
         <small class="text-form text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"/>
         </div>
+
         <div class="form-group row">
             <label>Number telephon:</label>
             <input th:type="text" class="form-control" th:field="*{number}" th:errorclass="alert-danger" >
             <small class="text-form text-danger" th:if="${#fields.hasErrors('number')}" th:errors="*{number}"/>
-
         </div>
+
         <div class="form-group row">
             <label>Date:</label>
             <input class="form-control" th:type="text" th:field="*{createDate}" th:errorclass="alert-danger">
         </div>
+
         <input th:type="submit" th:value="Create" class="btn btn-secondary">
 
     </form>
 </div>
     </div>
 </div>
-<br><br>
+
+<!--FOOTER-->
 <footer th:replace="layout/Layout :: footer"/>
 </body>
 </html>
