--- a/src/main/resources/templates/layout/Layout.html
+++ b/src/main/resources/templates/layout/Layout.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}"/>
     <title th:text="${title}"> </title>
 </head>
+
 <body>
 <!--HEADER-->
 <header th:fragment="header">
@@ -17,6 +18,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Client
@@ -26,10 +28,9 @@
                     <a class="dropdown-item" th:href="@{/list}">All Clients</a>
                     <a class="dropdown-item" th:href="@{/form}">New client</a>
                     <div class="dropdown-divider"></div>
-
                 </div>
-
             </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Visit
@@ -40,10 +41,9 @@
                     <a class="dropdown-item" th:href="@{/visit/close}">Close visits</a>
                     <a class="dropdown-item" th:href="@{/visit/open}">Open visits</a>
                     <div class="dropdown-divider"></div>
-
                 </div>
-
             </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Massage
@@ -53,10 +53,9 @@
                     <a class="dropdown-item" th:href="@{/massage/list}">All massage</a>
                     <a class="dropdown-item" th:href="@{/massage/form}">New massage</a>
                     <div class="dropdown-divider"></div>
-
                 </div>
-
             </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     User
@@ -64,16 +63,15 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" th:href="@{/users}">All users</a>
                     <div class="dropdown-divider"></div>
-
                     <a class="dropdown-item" href="#"></a>
                     <a class="dropdown-item" th:href="@{/users/form}">New user</a>
-
                 </div>
-
             </li>
+
             <li class="nav-item active">
                 <a class="nav-link" th:href="@{/statistic}">Statistic <span class="sr-only">(current)</span></a>
             </li>
+
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Session:
@@ -81,9 +79,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#"></a>
                     <a class="dropdown-item" th:href="@{/user}">User</a>
-
                 </div>
-
             </li>
 
             <li class="nav-item">
@@ -91,13 +87,15 @@
             </li>
 
         </ul>
+
         <div class="float-right">Logged user: <span sec:authentication="name" class="mr-2"></span></div>
         <form th:action="@{/logout}" method="post">
             <input th:type="submit" class="btn btn-secondary" onclick="return confirm('Are you sure logout??');" th:value="'logout'"/>
         </form>
     </div>
-</nav>
 
+</nav>
+<!--JUUMBOTRON-->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">ALOES GABINET ODNOWY</h1>
@@ -114,6 +112,7 @@
 </div>
 <!--FOOTER-->
 <footer th:fragment="footer" class="container">
+    <br><br>
     <div class="row">
         <div class="col-sm-8 bg-light">
             Marcel Dragon Shop<br>
@@ -121,7 +120,7 @@
             ul.Gen.Jerzego Ziętka 6/2<br>
         </div>
         <div class="col-sm-4 bg-light">
-        <img th:src="@{/image/shop.png}"   width="100" height="100"/>
+        <img th:src="@{/image/logo.png}"   width="100" height="100"/>
         </div>
     </div>
     <script th:src="@{/js/jquery-3.2.1.min.js}"></script>
