--- a/src/main/resources/templates/error_403.html
+++ b/src/main/resources/templates/error_403.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/Layout :: head">
+<head th:replace="layout/layout :: head">
 </head>
 <body>
 <!--HEADER-->
-<header th:replace="layout/Layout :: header">
+<header th:replace="layout/layout :: header">
 </header>
 
 <!--CONTAINER-->
@@ -21,7 +21,7 @@
     </div>
 </div>
 
-<footer th:replace="layout/Layout :: footer">
+<footer th:replace="layout/layout :: footer">
 </footer>
 
 </body>
