--- a/src/main/resources/templates/client/listClient.html
+++ b/src/main/resources/templates/client/listClient.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/Layout :: head"/>
+<head th:replace="layout/layout :: head"/>
 <body>
 <!--HEADER-->
-<header th:replace="layout/Layout :: header"/>
+<header th:replace="layout/layout :: header"/>
 
 <!--CONTAINER-->
 <div class="container py-5">
@@ -17,13 +17,13 @@
 
       <div class="card-body">
 
- <div th:replace="layout/Layout :: info"/>
+ <div th:replace="layout/layout :: info"/>
 
 
 <table class="table table-hover sticky-top">
     <thead class="navbar-dark  bg-success">
     <tr>
-        <th>lp</th><th>ID</th><th>Name</th><th>Surname</th><th>Email</th><th>Edit</th><th>Details</th><th>Delate</th>
+        <th>lp</th><th>ID</th><th>Name</th><th>Surname</th><th>Email</th><th>Edit</th><th>Details</th><th>Delete</th>
     </tr>
     </thead>
     <tbody th:each="clientlist,lp:${list}">
@@ -35,9 +35,9 @@
     <td th:text="${clientlist.surname}"></td>
     <td th:text="${clientlist.email}"></td>
 
-    <td style="width:20px"><a th:href="@{form/} + ${clientlist.id}" class="btn btn-success">Edit</a></td>
+    <td style="width:20px"><a th:href="@{formClient/} + ${clientlist.id}" class="btn btn-success">Edit</a></td>
     <td style="width:20px"><a th:href="@{client/} + ${clientlist.id}" class="btn btn-info">Details</a> </td>
-    <td style="width:20px"><a th:href="@{client/delate/} + ${clientlist.id}" onclick="return confirm('Are sure delate??')" class="btn btn-danger">Delate</a>    </td>
+    <td style="width:20px"><a th:href="@{client/delete/} + ${clientlist.id}" onclick="return confirm('Are sure delete??')" class="btn btn-danger">Delete</a>    </td>
 </tr>
 </tbody>
 </table>
@@ -46,6 +46,6 @@
 </div>
 
         <!--FOOTER-->
-<footer th:replace="layout/Layout :: footer"/>
+<footer th:replace="layout/layout :: footer"/>
 </body>
 </html>
