--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
-<head th:replace="layout/Layout :: head"/>
+<head th:replace="layout/layout :: head"/>
 <body>
 <!--HEADER-->
-<header th:replace="layout/Layout :: header"/>
+<header th:replace="layout/layout :: header"/>
 
 <!--CONTAINER-->
 <div class="container py-5">
     <div class="card">
         <div class="card-header">
             <label th:text="${title}"/>
-            <div th:replace="layout/Layout :: info"/>
+            <div th:replace="layout/layout :: info"/>
 
         </div>
         <div class="card-body">
@@ -44,7 +44,7 @@
                     <td><img th:if="${listvisit.status == false}" style="width: 20px" th:src="@{/image/xx.png}"/>
                     <img th:if="${listvisit.status == true}" style="width:20px" th:src="@{/image/okk.png}"/></td>
 
-                    <td style="width:20px"><a th:href="@{/visit/visitDetails/} + ${listvisit.id}" class="btn btn-info">Details</a> </td>
+                    <td style="width:20px"><a th:href="@{/visit/} + ${listvisit.id}" class="btn btn-info">Details</a> </td>
                 </tr>
                 </tbody>
             </table>
@@ -55,7 +55,7 @@
     </div>
 
     <!--FOOTER-->
-    <footer th:replace="layout/Layout :: footer"/>
+    <footer th:replace="layout/layout :: footer"/>
 
 </body>
 </html>
