--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -25,8 +25,8 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#"></a>
-                    <a class="dropdown-item" th:href="@{/list}">All Clients</a>
-                    <a class="dropdown-item" th:href="@{/form}">New client</a>
+                    <a class="dropdown-item" th:href="@{/clients}">All clients</a>
+                    <a class="dropdown-item" th:href="@{/formClient}">New client</a>
                     <div class="dropdown-divider"></div>
                 </div>
             </li>
@@ -37,9 +37,9 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#"></a>
-                    <a class="dropdown-item" th:href="@{/visit/list}">All visits</a>
-                    <a class="dropdown-item" th:href="@{/visit/close}">Close visits</a>
-                    <a class="dropdown-item" th:href="@{/visit/open}">Open visits</a>
+                    <a class="dropdown-item" th:href="@{/visits}">All visits</a>
+                    <a class="dropdown-item" th:href="@{/visitsClose}">Close visits</a>
+                    <a class="dropdown-item" th:href="@{/visitsOpen}">Open visits</a>
                     <div class="dropdown-divider"></div>
                 </div>
             </li>
@@ -50,8 +50,8 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#"></a>
-                    <a class="dropdown-item" th:href="@{/massage/list}">All massage</a>
-                    <a class="dropdown-item" th:href="@{/massage/form}">New massage</a>
+                    <a class="dropdown-item" th:href="@{/massages}">All massage</a>
+                    <a class="dropdown-item" th:href="@{/formMassage}">New massage</a>
                     <div class="dropdown-divider"></div>
                 </div>
             </li>
@@ -64,7 +64,7 @@
                     <a class="dropdown-item" th:href="@{/users}">All users</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#"></a>
-                    <a class="dropdown-item" th:href="@{/users/form}">New user</a>
+                    <a class="dropdown-item" th:href="@{/formUser}">New user</a>
                 </div>
             </li>
 
