--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/Layout :: head"/>
+<head th:replace="layout/layout :: head"/>
 <body>
 <!--HEADER-->
-<header th:replace="layout/Layout :: header"/>
+<header th:replace="layout/layout :: header"/>
 
 <!--CONTAINER-->
 <div class="container py-4">
@@ -11,7 +11,7 @@
     <div class="card border-primary text-center">
 
         <!--INFO-->
-        <div th:replace="layout/Layout :: info"/>
+        <div th:replace="layout/layout :: info"/>
 
         <div class="card-header">
             Login:
