--- a/src/main/resources/templates/user/formUser.html
+++ b/src/main/resources/templates/user/formUser.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/Layout :: head"/>
+<head th:replace="layout/layout :: head"/>
 <body>
 <!--HEADER-->
-<header th:replace="layout/Layout :: header"/>
+<header th:replace="layout/layout :: header"/>
 
 <!--CONTAINER-->
 <div class="container pt-5">
@@ -13,7 +13,7 @@
         </div>
         <div class="card-body">
 
-            <form th:action="@{/users/form}" th:object="${newUser}"  method="post"  class="form-group">
+            <form th:action="@{/formUser}" th:object="${newUser}"  method="post"  class="form-group">
 
                 <div class="form-group row">
                     <label>Name:</label>
@@ -40,6 +40,6 @@
     </div>
 </div>
 
-<footer th:replace="layout/Layout :: footer"/>
+<footer th:replace="layout/layout :: footer"/>
 </body>
 </html>
