--- a/src/main/resources/templates/visit/visitItems.html
+++ b/src/main/resources/templates/visit/visitItems.html
@@ -11,7 +11,7 @@
     <td>{PRICE}</td>
     <td> <input type="number" name="quantity[]" id="quantity_{ID}" value="1" class="form-group" onchange="itemPrice.calculatorPrice({ID},{PRICE},this.value);"/> </td>
         <td><span id="total_itemPrice_{ID}">0</span></td>
-        <td><a href="#" class="btn btn-danger btn-xs" onclick="itemPrice.delateItem({ID});">X</a></td>
+        <td><a href="#" class="btn btn-danger btn-xs" onclick="itemPrice.deleteItem({ID});">X</a></td>
     </tr>
     </tbody>
 </table>
