--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -98,7 +98,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">ALOES GABINET ODNOWY</h1>
-            <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            <p class="lead">Your Body Shape Says About Your Health</p>
         </div>
     </div>
 </header>
@@ -114,7 +114,7 @@
     <br><br>
     <div class="row">
         <div class="col-sm-8 bg-light">
-            Marcel Dragon Shop<br>
+            Marcel Dragon<br>
             Piekary Slaskie<br>
             ul.Gen.Jerzego Ziętka 6/2<br>
         </div>
