--- a/src/main/resources/templates/client/listClient.html
+++ b/src/main/resources/templates/client/listClient.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="layout/layout :: head"/>
 <body>
 <!--HEADER-->
@@ -37,7 +37,7 @@
 
     <td style="width:20px"><a th:href="@{formClient/} + ${clientlist.id}" class="btn btn-success">Edit</a></td>
     <td style="width:20px"><a th:href="@{client/} + ${clientlist.id}" class="btn btn-info">Details</a> </td>
-    <td style="width:20px"><a th:href="@{client/delete/} + ${clientlist.id}" onclick="return confirm('Are sure delete??')" class="btn btn-danger">Delete</a>    </td>
+    <td sec:authorize="hasAuthority('ADMIN')" style="width:20px"><a th:href="@{client/delete/} + ${clientlist.id}" onclick="return confirm('Are sure delete??')" class="btn btn-danger">Delete</a>    </td>
 </tr>
 </tbody>
 </table>
