--- a/src/main/resources/templates/client/listClient.html
+++ b/src/main/resources/templates/client/listClient.html
@@ -26,7 +26,7 @@
         <th>lp</th><th>ID</th><th>Name</th><th>Surname</th><th>Email</th><th>Edit</th><th>Details</th><th>Delete</th>
     </tr>
     </thead>
-    <tbody th:each="clientlist,lp:${list}">
+    <tbody th:each="clientlist,lp:${clients}">
 <tr>
     <td th:text="${lp.count}">1</td>
 
