--- a/src/main/resources/templates/massage/listMassage.html
+++ b/src/main/resources/templates/massage/listMassage.html
@@ -21,7 +21,7 @@
                     <th>lp</th><th>ID</th><th>Name</th><th>Price</th><th>Edit</th><th>Details</th><th>Delete</th>
                 </tr>
                 </thead>
-                <tbody th:each="listMassage,lp:${listMassage}">
+                <tbody th:each="listMassage,lp:${massages}">
                 <tr>
                     <td th:text="${lp.count}">1</td>
 
